eks/IngressClass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  controller: k8s.io/ingress-nginx
